--- a/button/index.html
+++ b/button/index.html
@@ -12,5 +12,8 @@
 </head>
 <body>
   <div id="clickable">Click Here!</div>
+  <div>
+    <a href="../index.html">Back</a>
+  </div>
 </body>
 </html>
