--- a/generator/index.html
+++ b/generator/index.html
@@ -39,8 +39,11 @@
 </head>
 <body>
 <h1>Fibonacci generator</h1>
-<input type="text" id="display-number" value="1">
+<input type="text" id="display-number" value="1" size="30">
 <input type="button" id="next-number" value="Next">
 <input type="button" id="clickable-reset" value="Reset">
+<div>
+  <a href="../index.html">Back</a>
+</div>
 </body>
 </html>
