--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h1>Applications</h1>
-    <a href="hello/index.html">Hello ruby.wasm</a>
+    <ul>
+      <li><a href="hello/index.html">Hello ruby.wasm</a></li>
+      <li><a href="button/index.html">Button interaction</a></li>
+      <li><a href="generator/index.html">Use class</a></li>
+      <li><a href="stdlib/index.html">Use ruby standard library</a></li>
+    </ul>
   </body>
 </html>
