--- a/hello/index.html
+++ b/hello/index.html
@@ -1,4 +1,5 @@
 <html>
+<head>
   <script src="https://cdn.jsdelivr.net/npm/@ruby/3.3-wasm-wasi@2.6.1/dist/browser.script.iife.js"></script>
   <script type="text/ruby">
     require "js"
@@ -6,5 +7,6 @@
     puts RUBY_VERSION # (Printed to the Web browser console)
     JS.global[:document].write "Hello, ruby.wasm !"
   </script>
+</head>
+<body></body>
 </html>
-
