--- a/generator/index.html
+++ b/generator/index.html
@@ -1,41 +1,7 @@
 <html>
 <head>
   <script src="https://cdn.jsdelivr.net/npm/@ruby/3.3-wasm-wasi@2.6.1/dist/browser.script.iife.js"></script>
-  <script type="text/ruby">
-    class FibonacciGenerator
-      attr_reader :first, :second
-
-      def initialize(first = 1, second = 1)
-        reset(first, second)
-      end
-
-      def reset(first = 1, second = 1)
-        @first = first
-        @second = second
-      end
-
-      def next
-        sum = @first + @second
-        @first = @second
-        @second = sum
-        sum
-      end
-    end
-
-    require 'js'
-
-    clickable = JS.global[:document].querySelector('#next-number')
-    display_number = JS.global[:document].querySelector('#display-number')
-    fibonacci = FibonacciGenerator.new
-    clickable.addEventListener('click') do |_event|
-      display_number.setAttribute('value', fibonacci.next)
-    end
-    reset_button = JS.global[:document].querySelector('#clickable-reset')
-    reset_button.addEventListener('click') do |_event|
-      fibonacci.reset
-      display_number.setAttribute('value', 1)
-    end
-  </script>
+  <script type="text/ruby" src="main.rb"></script>
 </head>
 <body>
 <h1>Fibonacci generator</h1>
