--- a/stdlib/index.html
+++ b/stdlib/index.html
@@ -1,22 +1,7 @@
 <html>
 <head>
   <script src="https://cdn.jsdelivr.net/npm/@ruby/3.3-wasm-wasi@2.6.1/dist/browser.script.iife.js"></script>
-  <script type="text/ruby">
-    require 'js'
-    require 'prime'
-
-    primes = Prime.each
-    display_prime = JS.global[:document].querySelector('#display-prime')
-    next_button = JS.global[:document].querySelector('#next-prime')
-    next_button.addEventListener('click') do |_event|
-      display_prime.setAttribute('value', primes.next)
-    end
-    reset_button = JS.global[:document].querySelector('#clickable-reset')
-    reset_button.addEventListener('click') do |_event|
-      primes = Prime.each
-      display_prime.setAttribute('value', '')
-    end
-  </script>
+  <script type="text/ruby" src="main.rb"></script>
 </head>
 <body>
 <h1>Prime generator</h1>
