add link to index page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <li><a href="hello/index.html">Hello ruby.wasm</a></li>
       <li><a href="button/index.html">Button interaction</a></li>
       <li><a href="generator/index.html">Use class</a></li>
+      <li><a href="requiring/index.html">Use require_remote</a></li>
       <li><a href="stdlib/index.html">Use ruby standard library</a></li>
     </ul>
   </body>
